# tmc_wrs_gz

./: README.md  README_en.md  install.sh
tmc_wrs_gazebo/: CMakeLists.txt  package.xml
tmc_wrs_gazebo_launch/: CMakeLists.txt  package.xml
tmc_wrs_gazebo_worlds/: CMakeLists.txt  package.xml  setup.cfg  setup.py
tmc_wrs_gazebo_worlds/models/trofast/: model-1_4.sdf
tmc_wrs_gazebo_worlds/models/trofast_knob/: model-1_4.sdf
tmc_wrs_gazebo_worlds/models/wrc_bin_black/: model.sdf
tmc_wrs_gazebo_worlds/models/wrc_bin_green/: model.sdf
tmc_wrs_gazebo_worlds/models/wrc_bookshelf/: model.sdf
tmc_wrs_gazebo_worlds/models/wrc_container_a/: model.sdf
tmc_wrs_gazebo_worlds/models/wrc_container_b/: model.sdf
tmc_wrs_gazebo_worlds/models/wrc_frame/: model.sdf
tmc_wrs_gazebo_worlds/models/wrc_long_table/: model.sdf
tmc_wrs_gazebo_worlds/models/wrc_stair_like_drawer/: model.sdf
tmc_wrs_gazebo_worlds/models/wrc_tall_table/: model.sdf
tmc_wrs_gazebo_worlds/models/wrc_tray/: model.sdf
tmc_wrs_gazebo_worlds/scripts/: spawn_objects
tmc_wrs_gazebo_worlds/src/tmc_wrs_gazebo_worlds/: randomizer.py
tmc_wrs_gazebo_worlds/worlds/: wrs2020.world  wrs2020.world.xacro  wrs2020_fast.world  wrs2020_fast_highrtf.world  wrs2020_fast_highrtf_knob.world  wrs2020_fast_knob.world  wrs2020_highrtf.world  wrs2020_highrtf_knob.world  wrs2020_knob.world
tmc_wrs_gazebo_worlds/worlds/include/: physics.xacro
tmc_wrs_gz/: package.xml
tmc_wrs_gz_launch/: CMakeLists.txt
tmc_wrs_gz_launch/launch/: tmc_wrs_world.launch.py
tmc_wrs_gz_worlds/: package.xml
tmc_wrs_gz_worlds/models/person_standing/: model.config  model.sdf
tmc_wrs_gz_worlds/models/person_walking/: model.config  model.sdf
tmc_wrs_gz_worlds/models/trofast/: model-1_4.sdf  model.config
tmc_wrs_gz_worlds/models/trofast_knob/: model-1_4.sdf  model.config
tmc_wrs_gz_worlds/models/wrc_bin_black/: model.config  model.sdf
tmc_wrs_gz_worlds/models/wrc_bin_green/: model.config  model.sdf
tmc_wrs_gz_worlds/models/wrc_bookshelf/: model.config  model.sdf
tmc_wrs_gz_worlds/models/wrc_container_a/: model.config  model.sdf
tmc_wrs_gz_worlds/models/wrc_container_b/: model.config  model.sdf
tmc_wrs_gz_worlds/models/wrc_frame/: model.config  model.sdf
tmc_wrs_gz_worlds/models/wrc_ground_plane/: model.config  model.sdf
tmc_wrs_gz_worlds/models/wrc_long_table/: model.config  model.sdf
tmc_wrs_gz_worlds/models/wrc_stair_like_drawer/: model.config  model.sdf
tmc_wrs_gz_worlds/models/wrc_tall_table/: model.config  model.sdf
tmc_wrs_gz_worlds/models/wrc_tray/: model.config  model.sdf
tmc_wrs_gz_worlds/models/ycb_001_cheez-it/: model-1_4.sdf  model.config
tmc_wrs_gz_worlds/models/ycb_002_master_chef_can/: model-1_4.sdf  model.config
tmc_wrs_gz_worlds/models/ycb_002_sugar_box/: model-1_4.sdf  model.config
tmc_wrs_gz_worlds/models/ycb_003_cracker_box/: model-1_4.sdf  model.config
tmc_wrs_gz_worlds/models/ycb_003_jell-o_chocolate_pudding_box/: model-1_4.sdf  model.config
tmc_wrs_gz_worlds/models/ycb_004_sugar_box/: model-1_4.sdf  model.config
tmc_wrs_gz_worlds/models/ycb_005_spam/: model-1_4.sdf  model.config
tmc_wrs_gz_worlds/models/ycb_005_tomato_soup_can/: model-1_4.sdf
tmc_wrs_gz_worlds/models/ycb_006_coffee_can/: model-1_4.sdf  model.config
tmc_wrs_gz_worlds/models/ycb_006_mustard_bottle/: model-1_4.sdf  model.config
tmc_wrs_gz_worlds/models/ycb_007_tuna_fish_can/: model-1_4.sdf  model.config
tmc_wrs_gz_worlds/models/ycb_008_pudding_box/: model-1_4.sdf  model.config
tmc_wrs_gz_worlds/models/ycb_009_gelatin_box/: model-1_4.sdf  model.config
tmc_wrs_gz_worlds/models/ycb_010_potted_meat_can/: model-1_4.sdf  model.config
tmc_wrs_gz_worlds/models/ycb_010_tomato_soup_can/: model-1_4.sdf  model.config
tmc_wrs_gz_worlds/models/ycb_011_banana/: model-1_4.sdf  model.config
tmc_wrs_gz_worlds/models/ycb_012_strawberry/: model-1_4.sdf  model.config
tmc_wrs_gz_worlds/models/ycb_013_apple/: model-1_4.sdf  model.config
tmc_wrs_gz_worlds/models/ycb_014_lemon/: model-1_4.sdf  model.config
tmc_wrs_gz_worlds/models/ycb_015_peach/: model-1_4.sdf  model.config
tmc_wrs_gz_worlds/models/ycb_016_pear/: model-1_4.sdf  model.config
tmc_wrs_gz_worlds/models/ycb_017_orange/: model-1_4.sdf  model.config
tmc_wrs_gz_worlds/models/ycb_018_plum/: model-1_4.sdf  model.config
tmc_wrs_gz_worlds/models/ycb_019_pitcher_base/: model-1_4.sdf  model.config
tmc_wrs_gz_worlds/models/ycb_021_bleach_cleanser/: model-1_4.sdf  model.config
tmc_wrs_gz_worlds/models/ycb_022_windex_bottle/: model-1_4.sdf  model.config
tmc_wrs_gz_worlds/models/ycb_024_bowl/: model-1_4.sdf  model.config
tmc_wrs_gz_worlds/models/ycb_025_mug/: model-1_4.sdf  model.config
tmc_wrs_gz_worlds/models/ycb_026_sponge/: model-1_4.sdf  model.config
tmc_wrs_gz_worlds/models/ycb_027_skillet/: model-1_4.sdf  model.config
tmc_wrs_gz_worlds/models/ycb_028_skillet_lid/: model-1_4.sdf  model.config
tmc_wrs_gz_worlds/models/ycb_029_plate/: model-1_4.sdf  model.config
tmc_wrs_gz_worlds/models/ycb_030_fork/: model-1_4.sdf  model.config
tmc_wrs_gz_worlds/models/ycb_031_spoon/: model-1_4.sdf  model.config
tmc_wrs_gz_worlds/models/ycb_032_knife/: model-1_4.sdf  model.config
tmc_wrs_gz_worlds/models/ycb_033_spatula/: model-1_4.sdf  model.config
tmc_wrs_gz_worlds/models/ycb_035_power_drill/: model-1_4.sdf  model.config
tmc_wrs_gz_worlds/models/ycb_036_wood_block/: model-1_4.sdf  model.config
tmc_wrs_gz_worlds/models/ycb_037_scissors/: model-1_4.sdf  model.config
tmc_wrs_gz_worlds/models/ycb_038_padlock/: model-1_4.sdf  model.config
tmc_wrs_gz_worlds/models/ycb_040_large_marker/: model-1_4.sdf  model.config
tmc_wrs_gz_worlds/models/ycb_042_adjustable_wrench/: model-1_4.sdf  model.config
tmc_wrs_gz_worlds/models/ycb_043_phillips_screwdriver/: model-1_4.sdf  model.config
tmc_wrs_gz_worlds/models/ycb_044_flat_screwdriver/: model-1_4.sdf  model.config
tmc_wrs_gz_worlds/models/ycb_048_hammer/: model-1_4.sdf  model.config
tmc_wrs_gz_worlds/tmc_wrs_gz_worlds/: randomizer.py
tmc_wrs_gz_worlds/worlds/: wrs2020.world.xacro
(+160 files in other folders)
