cmake_minimum_required(VERSION 3.5)
project(tmc_wrs_gazebo)

set(ROS1 FALSE)
if(DEFINED ENV{ROS_DISTRO})
  if($ENV{ROS_DISTRO} STREQUAL "noetic")
    set(ROS1 TRUE)
  endif()
  if($ENV{ROS_DISTRO} STREQUAL "melodic")
    set(ROS1 TRUE)
  endif()
endif()

if(ROS1)
    find_package(catkin REQUIRED)
    catkin_metapackage()
else()
    find_package(ament_cmake REQUIRED)
    ament_package()
endif()
