<?xml version="1.0"?>
<package format="3">
  <name>tmc_wrs_gazebo</name>
  <version>1.0.0</version>
  <description>tmc_wrs_gazebo meta package</description>

  <maintainer email="xr-hsr-support@mail.toyota.co.jp">HSR Support</maintainer>

  <license>BSD 3-clause Clear License</license>

  <author>Yosuke Matsusaka</author>
  <author>Nobuyuki Matsuno</author>

  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <exec_depend>tmc_wrs_launch</exec_depend>
  <exec_depend>tmc_wrs_worlds</exec_depend>
  <export>
    <metapackage/>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
  </export>
</package>
