<?xml version="1.0"?>
<package format="3">
  <name>tmc_wrs_gazebo_launch</name>
  <version>1.0.0</version>
  <description>Launch files for WRS2020</description>

  <maintainer email="xr-hsr-support@mail.toyota.co.jp">HSR Support</maintainer>

  <license>BSD 3-clause Clear License</license>

  <author>Yosuke Matsusaka</author>
  <author>Nobuyuki Matsuno</author>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>

  <exec_depend>roslaunch</exec_depend>

  <exec_depend>hsrb_rosnav_config</exec_depend>
  <exec_depend>hsrb_moveit_config</exec_depend>

  <exec_depend>hsrb_gazebo_launch</exec_depend>
  <exec_depend>hsrb_gazebo_task_evaluators</exec_depend>
  <exec_depend>tmc_wrs_gazebo_worlds</exec_depend>
  <exec_depend>rosbag</exec_depend>
  <exec_depend>rviz</exec_depend>

  <export>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
  </export>
</package>
