<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tmc_wrs_gz_launch</name>
  <version>1.0.0</version>
  <description>Launch files for WRS2020</description>

  <maintainer email="kvalentincardenas@gmail.com">Keith Valentin</maintainer>

  <license>BSD 3-clause Clear License</license>

  <author>Yosuke Matsusaka</author>
  <author>Nobuyuki Matsuno</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>tmc_wrs_gz_worlds</depend>
  <depend>ros_gz_sim</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>rviz</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
