<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tmc_wrs_gz_launch</name>
  <version>1.0.0</version>
  <description>Launch files for WRS2020</description>

  <maintainer email="kvalentincardenas@gmail.com">Keith Valentin</maintainer>

  <license>BSD 3-clause Clear License</license>

  <author>Yosuke Matsusaka</author>
  <author>Nobuyuki Matsuno</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>tmc_wrs_gz_worlds</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rviz</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
