<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tmc_wrs_gz_worlds</name>
  <version>1.0.0</version>
  <description>World and model files for WRS Gazebo simulator</description>

  <maintainer email="kvalentincardenas@gmail.com">Keith Valentin</maintainer>

  <license>BSD 3-clause Clear License</license>
  <license>Creative Commons Attribution 3.0 Unported</license>
  <license>Creative Commons Attribution 4.0 International</license>

  <author>Yosuke Matsusaka</author>
  <author>Nobuyuki Matsuno</author>

  <buildtool_depend>ament_python</buildtool_depend>
  
  <exec_depend>rclpy</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
